crates/snapshots/snapshots/cli_snapshots__styles__style_alias_retained.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_alias_retained

--- step: migrate ---
status: 0
stdout: "Previewed 0 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[unresolved-selector-target] Button.module.css:1:1-1:27 No exclusively supported className references were found.\nwarning[aliased-css-module-reference] Button.tsx:2:7-2:34 A CSS Module class is aliased to a binding, so the module is retained.\nwarning[dynamic-class-name] Button.tsx:3:47-3:60 Only static className values are supported.\n"
workspace delta:
  unchanged
