crates/snapshots/snapshots/cli_snapshots__styles__style_breakpoint_range.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_breakpoint_range

--- step: migrate ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,1 +0,0 @@\n-@media (min-width: 48rem) and (max-width: 63.999rem) { .button { padding: 13px; } }\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,1 @@\n-import styles from './Button.module.css';\n-export const Button = () => <button className={styles.button}>Save</button>;\n+export const Button = () => <button className=\"md:width-lte-63p999rem:p-[13px]\">Save</button>;\n--- a/globals.css\n+++ b/globals.css\n@@ -1,1 +1,7 @@\n @import \"tailwindcss\";\n+\n+@custom-variant width-lte-63p999rem {\n+  @media (width <= 63.999rem) {\n+    @slot;\n+  }\n+}\nApplied 3 file(s); 1 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  deleted Button.module.css
    before: "@media (min-width: 48rem) and (max-width: 63.999rem) { .button { padding: 13px; } }\n"
  modified Button.tsx
    before: "import styles from './Button.module.css';\nexport const Button = () => <button className={styles.button}>Save</button>;\n"
    after: "export const Button = () => <button className=\"md:width-lte-63p999rem:p-[13px]\">Save</button>;\n"
  modified globals.css
    before: "@import \"tailwindcss\";\n"
    after: "@import \"tailwindcss\";\n\n@custom-variant width-lte-63p999rem {\n  @media (width <= 63.999rem) {\n    @slot;\n  }\n}\n"
