crates/snapshots/snapshots/cli_snapshots__styles__style_candidate_all_fail.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_candidate_all_fail

--- step: migrate ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 2 retained.\n"
stderr: "warning[candidate-compilation-failure] Button.module.css:1:1-1:24 Tailwind did not generate CSS for `[COLOR:red]`, so the rule is retained.\nwarning[candidate-compilation-failure] Button.module.css:2:1-2:29 Tailwind did not generate CSS for `[BACKGROUND:blue]`, so the rule is retained.\n"
workspace delta:
  unchanged
