crates/snapshots/snapshots/cli_snapshots__styles__style_candidate_batch.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_candidate_batch

--- step: batch ---
status: 0
stdout: "--- a/a.module.css\n+++ b/a.module.css\n@@ -1,1 +0,0 @@\n-.a { padding: 13px; }\n--- a/A.tsx\n+++ b/A.tsx\n@@ -1,2 +1,1 @@\n-import styles from './a.module.css';\n-export const A = () => <div className={styles.a} />;\n+export const A = () => <div className=\"p-[13px]\" />;\n--- a/c.module.css\n+++ b/c.module.css\n@@ -1,1 +0,0 @@\n-.c { display: grid; }\n--- a/C.tsx\n+++ b/C.tsx\n@@ -1,2 +1,1 @@\n-import styles from './c.module.css';\n-export const C = () => <div className={styles.c} />;\n+export const C = () => <div className=\"grid\" />;\nApplied 4 file(s); 2 rule(s) converted, 1 retained.\n"
stderr: "warning[candidate-compilation-failure] b.module.css:1:1-1:24 Tailwind did not generate CSS for `[COLOR:red]`, so the rule is retained.\n"
workspace delta:
  modified A.tsx
    before: "import styles from './a.module.css';\nexport const A = () => <div className={styles.a} />;\n"
    after: "export const A = () => <div className=\"p-[13px]\" />;\n"
  modified C.tsx
    before: "import styles from './c.module.css';\nexport const C = () => <div className={styles.c} />;\n"
    after: "export const C = () => <div className=\"grid\" />;\n"
  deleted a.module.css
    before: ".a { padding: 13px; }\n"
  deleted c.module.css
    before: ".c { display: grid; }\n"
