crates/snapshots/snapshots/cli_snapshots__styles__style_candidate_partial.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_candidate_partial

--- step: migrate ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,2 +1,2 @@\n .button { COLOR: red; }\n-.good { padding: 13px; }\n+\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,2 @@\n import styles from './Button.module.css';\n-export const Button = () => <button className={styles.button}><i className={styles.good} /></button>;\n+export const Button = () => <button className={styles.button}><i className=\"p-[13px]\" /></button>;\nApplied 2 file(s); 1 rule(s) converted, 1 retained.\n"
stderr: "warning[candidate-compilation-failure] Button.module.css:1:1-1:24 Tailwind did not generate CSS for `[COLOR:red]`, so the rule is retained.\n"
workspace delta:
  modified Button.module.css
    before: ".button { COLOR: red; }\n.good { padding: 13px; }\n"
    after: ".button { COLOR: red; }\n\n"
  modified Button.tsx
    before: "import styles from './Button.module.css';\nexport const Button = () => <button className={styles.button}><i className={styles.good} /></button>;\n"
    after: "import styles from './Button.module.css';\nexport const Button = () => <button className={styles.button}><i className=\"p-[13px]\" /></button>;\n"

--- step: second run ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[candidate-compilation-failure] Button.module.css:1:1-1:24 Tailwind did not generate CSS for `[COLOR:red]`, so the rule is retained.\n"
workspace delta:
  unchanged
