crates/snapshots/snapshots/cli_snapshots__styles__style_commented_tailwind.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_commented_tailwind

--- step: migrate ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,1 +0,0 @@\n-.button { padding: 13px; }\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,1 @@\n-import styles from './Button.module.css';\n-export const Button = () => <button className={styles.button}>Save</button>;\n+export const Button = () => <button className=\"p-[13px]\">Save</button>;\nPreviewed 2 file(s); 1 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  unchanged
